Update - trying to fix block height. adjust span text vert alignment 3

--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ button {
 */
 /* Optionally, override vis.js item content styles for figure blocks  */
 
-.vis-item-content .figure-content {
+.vis-item-content {
   display: flex;
   align-items: center;
   /*justify-content: center; /* Use this if you also want horizontal centering */
